@@ -5,6 +5,7 @@ gcc-defaults (1.148) UNRELEASED; urgency=medium
   * Enable the gnat cross build on sh4.
   * gcc-hppa64-linux-gnu: Fix gcc symlink, don't ship gcov and gcov-tool.
     Closes: #806423.
+  * Stop building gccgo-hppa-linux-gnu, gccgo-m68k-linux-gnu.
 
  -- Matthias Klose <doko@debian.org>  Thu, 26 Nov 2015 19:12:20 +0100
 
